Bug 1771213 - mozilla::baseprofiler::baseprofiler_save_profile_to_file now has prefix "base" to avoid lldb call ambiguity - r=mstange

Calling `profiler_save_profile_to_file` from lldb errored with "call to 'profiler_save_profile_to_file' is ambiguous", even though they're in different namespaces.

Differential Revision: https://phabricator.services.mozilla.com/D148360